--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-12T14:46:24Z</date>
+						<date>2019-06-14T17:34:35Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -72,21 +72,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5SEHlmzIRPnE
-								h1Zlyu2W+A==
+								TPGeujKpTzHL
+								QR5lGhvUSw==
 								</data>
 								<key>Size</key>
-								<integer>35205</integer>
+								<integer>35739</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZP2FJ/yve/bb
-								UMUDEFQ7OA==
+								v9Af7SEGojgo
+								zGOufpUslA==
 								</data>
 								<key>Size</key>
-								<integer>68310</integer>
+								<integer>69192</integer>
 							</dict>
 							<key>files/stacks-image-0dd0fd3-300x256.png</key>
 							<dict>
@@ -302,31 +302,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CoKWcHGNbDbD
-								YqxmSFPWeg==
+								u5GFSjxY64X+
+								vdRQFtCSAA==
 								</data>
 								<key>Size</key>
-								<integer>137343</integer>
+								<integer>138011</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								jxRjpIIychSH
-								8LUQXFmaag==
+								hpxz4yNNbS37
+								pcZG8tN4mg==
 								</data>
 								<key>Size</key>
-								<integer>24349</integer>
+								<integer>23922</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								40wMrA4UkYSV
-								9uO2F5Rw8g==
+								Oub6v41B0rU5
+								FNQNPhMT4A==
 								</data>
 								<key>Size</key>
-								<integer>81605</integer>
+								<integer>81569</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
