--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -18,9 +18,11 @@
 	<true/>
 	<key>projectViewWidth</key>
 	<real>228</real>
+	<key>selectedInspectorTab</key>
+	<string>info</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page86</string>
+		<string>page49</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
