--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/16-CS-Education-Summit/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/16-CS-Education-Summit/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-13T15:48:26Z</date>
+						<date>2019-06-19T16:47:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9DoaP2w0G7/K
-								MgXKGTqxxA==
+								0pMculnL9v3X
+								wmNnrP+DwA==
 								</data>
 								<key>Size</key>
-								<integer>20202</integer>
+								<integer>19825</integer>
 							</dict>
 							<key>files/stacks-image-a86827b-250x250.jpg</key>
 							<dict>
@@ -162,8 +162,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4nCA4HrGjFUu
-								JmCH+Lohxw==
+								l0mnQ4Ltq5AU
+								UTQoITINKw==
 								</data>
 								<key>Size</key>
 								<integer>50422</integer>
