--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -3904,7 +3904,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-14T17:34:35Z</date>
+						<date>2019-06-25T16:33:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3979,6 +3979,26 @@
 								<key>Size</key>
 								<integer>223202</integer>
 							</dict>
+							<key>files/stacks-image-10532b8-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								a1BUOzaR5KPl
+								3RINwCJxkw==
+								</data>
+								<key>Size</key>
+								<integer>97254</integer>
+							</dict>
+							<key>files/stacks-image-10532b8-250x260@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								lwNbJHwMBUTZ
+								VU3YaEeMnw==
+								</data>
+								<key>Size</key>
+								<integer>320696</integer>
+							</dict>
 							<key>files/stacks-image-238bd39-1200x800.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -4039,6 +4059,16 @@
 								<key>Size</key>
 								<integer>336849</integer>
 							</dict>
+							<key>files/stacks-image-579eb0e-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								vK7f/XKTwh+c
+								rFx3vAmGnA==
+								</data>
+								<key>Size</key>
+								<integer>105735</integer>
+							</dict>
 							<key>files/stacks-image-5dab26b-250x260.png</key>
 							<dict>
 								<key>Digest</key>
@@ -4058,6 +4088,16 @@
 								</data>
 								<key>Size</key>
 								<integer>238657</integer>
+							</dict>
+							<key>files/stacks-image-5e1ff49-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								guTR1w879WqI
+								inPMO5tVtg==
+								</data>
+								<key>Size</key>
+								<integer>79044</integer>
 							</dict>
 							<key>files/stacks-image-779681d-1200x800.jpg</key>
 							<dict>
@@ -4129,6 +4169,16 @@
 								<key>Size</key>
 								<integer>217418</integer>
 							</dict>
+							<key>files/stacks-image-a2c2113-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								W+W+U6cLz7Mn
+								NwGaYpHcIw==
+								</data>
+								<key>Size</key>
+								<integer>81756</integer>
+							</dict>
 							<key>files/stacks-image-bcdb310-250x260.png</key>
 							<dict>
 								<key>Digest</key>
@@ -4173,11 +4223,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								u5GFSjxY64X+
-								vdRQFtCSAA==
+								gIv3PX5O3FJ/
+								HXIO63455Q==
 								</data>
 								<key>Size</key>
-								<integer>138011</integer>
+								<integer>152407</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -4193,11 +4243,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Oub6v41B0rU5
-								FNQNPhMT4A==
+								KtV3RML39U96
+								8Ukr9xdibg==
 								</data>
 								<key>Size</key>
-								<integer>81569</integer>
+								<integer>85421</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6300,7 +6350,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-14T17:34:35Z</date>
+						<date>2019-06-25T16:33:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6364,6 +6414,26 @@
 								</data>
 								<key>Size</key>
 								<integer>69192</integer>
+							</dict>
+							<key>files/stacks-image-10532b8-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								a1BUOzaR5KPl
+								3RINwCJxkw==
+								</data>
+								<key>Size</key>
+								<integer>97254</integer>
+							</dict>
+							<key>files/stacks-image-10532b8-250x260@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								lwNbJHwMBUTZ
+								VU3YaEeMnw==
+								</data>
+								<key>Size</key>
+								<integer>320696</integer>
 							</dict>
 							<key>files/stacks-image-1e491bc-300x256.png</key>
 							<dict>
@@ -6465,6 +6535,16 @@
 								<key>Size</key>
 								<integer>336849</integer>
 							</dict>
+							<key>files/stacks-image-579eb0e-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								vK7f/XKTwh+c
+								rFx3vAmGnA==
+								</data>
+								<key>Size</key>
+								<integer>105735</integer>
+							</dict>
 							<key>files/stacks-image-5dab26b-250x260.png</key>
 							<dict>
 								<key>Digest</key>
@@ -6484,6 +6564,16 @@
 								</data>
 								<key>Size</key>
 								<integer>238657</integer>
+							</dict>
+							<key>files/stacks-image-5e1ff49-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								guTR1w879WqI
+								inPMO5tVtg==
+								</data>
+								<key>Size</key>
+								<integer>79044</integer>
 							</dict>
 							<key>files/stacks-image-6a176f2.jpg</key>
 							<dict>
@@ -6524,6 +6614,16 @@
 								</data>
 								<key>Size</key>
 								<integer>15500</integer>
+							</dict>
+							<key>files/stacks-image-a2c2113-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								W+W+U6cLz7Mn
+								NwGaYpHcIw==
+								</data>
+								<key>Size</key>
+								<integer>81756</integer>
 							</dict>
 							<key>files/stacks-image-a63dce2-1200x796.jpg</key>
 							<dict>
@@ -6639,11 +6739,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tPCekqedsfN8
-								NmUp3ce7HQ==
+								7h2p/g5E2CXr
+								H/63zKukrA==
 								</data>
 								<key>Size</key>
-								<integer>172499</integer>
+								<integer>188069</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -6659,11 +6759,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								xhBwYH+F8EQl
-								Xxr1weeGBA==
+								W5Z2wrhtm4F8
+								/RKa7owbrQ==
 								</data>
 								<key>Size</key>
-								<integer>131850</integer>
+								<integer>145120</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14978,7 +15078,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-19T16:47:38Z</date>
+						<date>2019-06-25T16:33:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -16057,11 +16157,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								PULZWYlV+/bI
-								ZDxFM5b8og==
+								84N66Vt6e3mJ
+								Cq9/3Q2Qng==
 								</data>
 								<key>Size</key>
-								<integer>3793</integer>
+								<integer>3830</integer>
 							</dict>
 							<key>vein.min.js</key>
 							<dict>
@@ -16215,7 +16315,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFdT1lBo9uADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFhQi8ZfQ+ADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16225,14 +16325,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwV1PWUGk
-				aoAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwWFCLxl9
+				fIAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBXU9ZQaSc
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBYUIvGX2m
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16242,7 +16342,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBXU9ZQaTGgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBYUIvGX2/gAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16252,7 +16352,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBXU9ZQaTfgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBYUIvGX3QgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
