--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-14T17:34:35Z</date>
+						<date>2019-06-25T16:33:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -97,6 +97,26 @@
 								</data>
 								<key>Size</key>
 								<integer>69192</integer>
+							</dict>
+							<key>files/stacks-image-10532b8-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								a1BUOzaR5KPl
+								3RINwCJxkw==
+								</data>
+								<key>Size</key>
+								<integer>97254</integer>
+							</dict>
+							<key>files/stacks-image-10532b8-250x260@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								lwNbJHwMBUTZ
+								VU3YaEeMnw==
+								</data>
+								<key>Size</key>
+								<integer>320696</integer>
 							</dict>
 							<key>files/stacks-image-1e491bc-300x256.png</key>
 							<dict>
@@ -198,6 +218,16 @@
 								<key>Size</key>
 								<integer>336849</integer>
 							</dict>
+							<key>files/stacks-image-579eb0e-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								vK7f/XKTwh+c
+								rFx3vAmGnA==
+								</data>
+								<key>Size</key>
+								<integer>105735</integer>
+							</dict>
 							<key>files/stacks-image-5dab26b-250x260.png</key>
 							<dict>
 								<key>Digest</key>
@@ -217,6 +247,16 @@
 								</data>
 								<key>Size</key>
 								<integer>238657</integer>
+							</dict>
+							<key>files/stacks-image-5e1ff49-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								guTR1w879WqI
+								inPMO5tVtg==
+								</data>
+								<key>Size</key>
+								<integer>79044</integer>
 							</dict>
 							<key>files/stacks-image-6a176f2.jpg</key>
 							<dict>
@@ -257,6 +297,16 @@
 								</data>
 								<key>Size</key>
 								<integer>15500</integer>
+							</dict>
+							<key>files/stacks-image-a2c2113-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								W+W+U6cLz7Mn
+								NwGaYpHcIw==
+								</data>
+								<key>Size</key>
+								<integer>81756</integer>
 							</dict>
 							<key>files/stacks-image-a63dce2-1200x796.jpg</key>
 							<dict>
@@ -372,11 +422,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tPCekqedsfN8
-								NmUp3ce7HQ==
+								7h2p/g5E2CXr
+								H/63zKukrA==
 								</data>
 								<key>Size</key>
-								<integer>172499</integer>
+								<integer>188069</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -392,11 +442,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								xhBwYH+F8EQl
-								Xxr1weeGBA==
+								W5Z2wrhtm4F8
+								/RKa7owbrQ==
 								</data>
 								<key>Size</key>
-								<integer>131850</integer>
+								<integer>145120</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
