--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-14T17:34:35Z</date>
+						<date>2019-06-25T16:33:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -108,6 +108,26 @@
 								<key>Size</key>
 								<integer>223202</integer>
 							</dict>
+							<key>files/stacks-image-10532b8-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								a1BUOzaR5KPl
+								3RINwCJxkw==
+								</data>
+								<key>Size</key>
+								<integer>97254</integer>
+							</dict>
+							<key>files/stacks-image-10532b8-250x260@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								lwNbJHwMBUTZ
+								VU3YaEeMnw==
+								</data>
+								<key>Size</key>
+								<integer>320696</integer>
+							</dict>
 							<key>files/stacks-image-238bd39-1200x800.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -168,6 +188,16 @@
 								<key>Size</key>
 								<integer>336849</integer>
 							</dict>
+							<key>files/stacks-image-579eb0e-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								vK7f/XKTwh+c
+								rFx3vAmGnA==
+								</data>
+								<key>Size</key>
+								<integer>105735</integer>
+							</dict>
 							<key>files/stacks-image-5dab26b-250x260.png</key>
 							<dict>
 								<key>Digest</key>
@@ -187,6 +217,16 @@
 								</data>
 								<key>Size</key>
 								<integer>238657</integer>
+							</dict>
+							<key>files/stacks-image-5e1ff49-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								guTR1w879WqI
+								inPMO5tVtg==
+								</data>
+								<key>Size</key>
+								<integer>79044</integer>
 							</dict>
 							<key>files/stacks-image-779681d-1200x800.jpg</key>
 							<dict>
@@ -258,6 +298,16 @@
 								<key>Size</key>
 								<integer>217418</integer>
 							</dict>
+							<key>files/stacks-image-a2c2113-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								W+W+U6cLz7Mn
+								NwGaYpHcIw==
+								</data>
+								<key>Size</key>
+								<integer>81756</integer>
+							</dict>
 							<key>files/stacks-image-bcdb310-250x260.png</key>
 							<dict>
 								<key>Digest</key>
@@ -302,11 +352,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								u5GFSjxY64X+
-								vdRQFtCSAA==
+								gIv3PX5O3FJ/
+								HXIO63455Q==
 								</data>
 								<key>Size</key>
-								<integer>138011</integer>
+								<integer>152407</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -322,11 +372,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Oub6v41B0rU5
-								FNQNPhMT4A==
+								KtV3RML39U96
+								8Ukr9xdibg==
 								</data>
 								<key>Size</key>
-								<integer>81569</integer>
+								<integer>85421</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
