--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -7,10 +7,6 @@
 		<string>page3</string>
 		<string>page16</string>
 		<string>page36</string>
-		<string>page53</string>
-		<string>page69</string>
-		<string>page10</string>
-		<string>page5</string>
 	</array>
 	<key>pageInspectorVisible</key>
 	<false/>
@@ -18,9 +14,11 @@
 	<true/>
 	<key>projectViewWidth</key>
 	<real>228</real>
+	<key>selectedInspectorTab</key>
+	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page86</string>
+		<string>page49</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
