JB CNWW faculty
JB CNWW faculty

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -3904,7 +3904,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-25T16:33:31Z</date>
+						<date>2019-06-26T19:51:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3943,21 +3943,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TPGeujKpTzHL
-								QR5lGhvUSw==
+								5SEHlmzIRPnE
+								h1Zlyu2W+A==
 								</data>
 								<key>Size</key>
-								<integer>35739</integer>
+								<integer>35205</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								v9Af7SEGojgo
-								zGOufpUslA==
+								ZP2FJ/yve/bb
+								UMUDEFQ7OA==
 								</data>
 								<key>Size</key>
-								<integer>69192</integer>
+								<integer>68310</integer>
 							</dict>
 							<key>files/stacks-image-0dd0fd3-300x256.png</key>
 							<dict>
@@ -3998,6 +3998,26 @@
 								</data>
 								<key>Size</key>
 								<integer>320696</integer>
+							</dict>
+							<key>files/stacks-image-1aebfb5-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								+izhYKYrLWD4
+								lK4RNUA97Q==
+								</data>
+								<key>Size</key>
+								<integer>94301</integer>
+							</dict>
+							<key>files/stacks-image-1aebfb5-250x250@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								J6OHZRoZ633w
+								4PBLPHS8EQ==
+								</data>
+								<key>Size</key>
+								<integer>335617</integer>
 							</dict>
 							<key>files/stacks-image-238bd39-1200x800.jpg</key>
 							<dict>
@@ -4223,11 +4243,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								gIv3PX5O3FJ/
-								HXIO63455Q==
+								/15bNACcIZ/9
+								NF/hg5aZ2w==
 								</data>
 								<key>Size</key>
-								<integer>152407</integer>
+								<integer>156593</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -4243,11 +4263,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KtV3RML39U96
-								8Ukr9xdibg==
+								nQTAzQc/F2VL
+								q3x9RfKihQ==
 								</data>
 								<key>Size</key>
-								<integer>85421</integer>
+								<integer>88184</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6350,7 +6370,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-25T16:33:31Z</date>
+						<date>2019-06-26T19:51:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6399,21 +6419,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TPGeujKpTzHL
-								QR5lGhvUSw==
+								5SEHlmzIRPnE
+								h1Zlyu2W+A==
 								</data>
 								<key>Size</key>
-								<integer>35739</integer>
+								<integer>35205</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								v9Af7SEGojgo
-								zGOufpUslA==
+								ZP2FJ/yve/bb
+								UMUDEFQ7OA==
 								</data>
 								<key>Size</key>
-								<integer>69192</integer>
+								<integer>68310</integer>
 							</dict>
 							<key>files/stacks-image-10532b8-250x260.png</key>
 							<dict>
@@ -6434,6 +6454,26 @@
 								</data>
 								<key>Size</key>
 								<integer>320696</integer>
+							</dict>
+							<key>files/stacks-image-1aebfb5-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								+izhYKYrLWD4
+								lK4RNUA97Q==
+								</data>
+								<key>Size</key>
+								<integer>94301</integer>
+							</dict>
+							<key>files/stacks-image-1aebfb5-250x250@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								J6OHZRoZ633w
+								4PBLPHS8EQ==
+								</data>
+								<key>Size</key>
+								<integer>335617</integer>
 							</dict>
 							<key>files/stacks-image-1e491bc-300x256.png</key>
 							<dict>
@@ -6739,11 +6779,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7h2p/g5E2CXr
-								H/63zKukrA==
+								5wQEJCKqgq1v
+								mx3Pyuigow==
 								</data>
 								<key>Size</key>
-								<integer>188069</integer>
+								<integer>192255</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -6759,11 +6799,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								W5Z2wrhtm4F8
-								/RKa7owbrQ==
+								/rZ18MmxoZH3
+								gnHpwWRQYg==
 								</data>
 								<key>Size</key>
-								<integer>145120</integer>
+								<integer>148332</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15078,7 +15118,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-25T16:48:40Z</date>
+						<date>2019-06-26T19:51:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -16157,11 +16197,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RONDMlkmb+aF
-								RWmh1dPqXA==
+								uM+LF22KxNdX
+								i19VnuJwyQ==
 								</data>
 								<key>Size</key>
-								<integer>3867</integer>
+								<integer>3830</integer>
 							</dict>
 							<key>vein.min.js</key>
 							<dict>
@@ -16315,7 +16355,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFhQ/Vz9fmADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFiAi1CjW2ADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16325,14 +16365,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwWFD9XP2
-				f4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwWICLUKN
+				44AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBYUP1c/ay
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBYgItQo4N
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16342,7 +16382,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBYUP1c/bLgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBYgItQo4mgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16352,7 +16392,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBYUP1c/bsgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBYgItQo43gAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
