--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-25T16:33:31Z</date>
+						<date>2019-06-26T19:51:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,21 +82,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TPGeujKpTzHL
-								QR5lGhvUSw==
+								5SEHlmzIRPnE
+								h1Zlyu2W+A==
 								</data>
 								<key>Size</key>
-								<integer>35739</integer>
+								<integer>35205</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								v9Af7SEGojgo
-								zGOufpUslA==
+								ZP2FJ/yve/bb
+								UMUDEFQ7OA==
 								</data>
 								<key>Size</key>
-								<integer>69192</integer>
+								<integer>68310</integer>
 							</dict>
 							<key>files/stacks-image-10532b8-250x260.png</key>
 							<dict>
@@ -117,6 +117,26 @@
 								</data>
 								<key>Size</key>
 								<integer>320696</integer>
+							</dict>
+							<key>files/stacks-image-1aebfb5-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								+izhYKYrLWD4
+								lK4RNUA97Q==
+								</data>
+								<key>Size</key>
+								<integer>94301</integer>
+							</dict>
+							<key>files/stacks-image-1aebfb5-250x250@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								J6OHZRoZ633w
+								4PBLPHS8EQ==
+								</data>
+								<key>Size</key>
+								<integer>335617</integer>
 							</dict>
 							<key>files/stacks-image-1e491bc-300x256.png</key>
 							<dict>
@@ -422,11 +442,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7h2p/g5E2CXr
-								H/63zKukrA==
+								5wQEJCKqgq1v
+								mx3Pyuigow==
 								</data>
 								<key>Size</key>
-								<integer>188069</integer>
+								<integer>192255</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -442,11 +462,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								W5Z2wrhtm4F8
-								/RKa7owbrQ==
+								/rZ18MmxoZH3
+								gnHpwWRQYg==
 								</data>
 								<key>Size</key>
-								<integer>145120</integer>
+								<integer>148332</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
