--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-25T16:33:31Z</date>
+						<date>2019-06-26T19:51:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -72,21 +72,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TPGeujKpTzHL
-								QR5lGhvUSw==
+								5SEHlmzIRPnE
+								h1Zlyu2W+A==
 								</data>
 								<key>Size</key>
-								<integer>35739</integer>
+								<integer>35205</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								v9Af7SEGojgo
-								zGOufpUslA==
+								ZP2FJ/yve/bb
+								UMUDEFQ7OA==
 								</data>
 								<key>Size</key>
-								<integer>69192</integer>
+								<integer>68310</integer>
 							</dict>
 							<key>files/stacks-image-0dd0fd3-300x256.png</key>
 							<dict>
@@ -127,6 +127,26 @@
 								</data>
 								<key>Size</key>
 								<integer>320696</integer>
+							</dict>
+							<key>files/stacks-image-1aebfb5-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								+izhYKYrLWD4
+								lK4RNUA97Q==
+								</data>
+								<key>Size</key>
+								<integer>94301</integer>
+							</dict>
+							<key>files/stacks-image-1aebfb5-250x250@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								J6OHZRoZ633w
+								4PBLPHS8EQ==
+								</data>
+								<key>Size</key>
+								<integer>335617</integer>
 							</dict>
 							<key>files/stacks-image-238bd39-1200x800.jpg</key>
 							<dict>
@@ -352,11 +372,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								gIv3PX5O3FJ/
-								HXIO63455Q==
+								/15bNACcIZ/9
+								NF/hg5aZ2w==
 								</data>
 								<key>Size</key>
-								<integer>152407</integer>
+								<integer>156593</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -372,11 +392,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KtV3RML39U96
-								8Ukr9xdibg==
+								nQTAzQc/F2VL
+								q3x9RfKihQ==
 								</data>
 								<key>Size</key>
-								<integer>85421</integer>
+								<integer>88184</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
