--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -7,18 +7,17 @@
 		<string>page3</string>
 		<string>page16</string>
 		<string>page36</string>
+		<string>page69</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<false/>
+	<true/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
 	<real>228</real>
-	<key>selectedInspectorTab</key>
-	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page36</string>
+		<string>page70</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
