CNWW Faculty MM updates
CNWW Faculty MM updates

--- a/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-12T14:46:24Z</date>
+						<date>2019-07-02T16:05:57Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -162,31 +162,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Jsa5Ej6ZSvuZ
-								5CJ7nur37A==
+								RE2ANbfS9VjF
+								0bU0BOwuVg==
 								</data>
 								<key>Size</key>
-								<integer>169035</integer>
+								<integer>169666</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								AJn2prbnigOl
-								EmxqaCARLA==
+								e9uX6CCzlsSN
+								U5VtmwYaKQ==
 								</data>
 								<key>Size</key>
-								<integer>24349</integer>
+								<integer>23922</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								J1WNHnCacANX
-								ucQfXfvxSg==
+								sOCyrk3llT/X
+								MecFjUv8TQ==
 								</data>
 								<key>Size</key>
-								<integer>88490</integer>
+								<integer>88161</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
