--- a/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-02T14:40:41Z</date>
+						<date>2019-07-02T16:05:57Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -312,11 +312,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								l3ZuK+gSciyq
-								+wYhMNV64g==
+								mEMRDivRvemb
+								uFEjoMGQfg==
 								</data>
 								<key>Size</key>
-								<integer>94914</integer>
+								<integer>94789</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
