--- a/vermontcomplexsystems-foundation.rw8/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-12T14:46:25Z</date>
+						<date>2019-07-02T15:55:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,31 +104,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								oPPHrWE6du6I
-								rtUkbs455w==
+								bP4Lk+2bZfwr
+								kPxqOpCXjg==
 								</data>
 								<key>Size</key>
-								<integer>121629</integer>
+								<integer>122385</integer>
 							</dict>
 							<key>files/stacks_page_page6.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								KJcXP6Jb8P1z
-								jQq/j7qoNw==
+								mOEhyoXmvMB+
+								/Xd+gm3pWQ==
 								</data>
 								<key>Size</key>
-								<integer>25419</integer>
+								<integer>24992</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								HI49J8YYpQar
-								ZORyM0HRtw==
+								5OTgwvPkV8er
+								iLdYVoengQ==
 								</data>
 								<key>Size</key>
-								<integer>54550</integer>
+								<integer>54625</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
