--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -3904,7 +3904,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-26T19:51:52Z</date>
+						<date>2019-07-02T16:12:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4119,6 +4119,16 @@
 								<key>Size</key>
 								<integer>79044</integer>
 							</dict>
+							<key>files/stacks-image-6bca931-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								DCIDka7mcE1x
+								ESFCfLAtQQ==
+								</data>
+								<key>Size</key>
+								<integer>90403</integer>
+							</dict>
 							<key>files/stacks-image-779681d-1200x800.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -4243,11 +4253,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/15bNACcIZ/9
-								NF/hg5aZ2w==
+								MjU1fy9Axp3G
+								1OuheHlqEw==
 								</data>
 								<key>Size</key>
-								<integer>156593</integer>
+								<integer>160779</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -4263,11 +4273,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nQTAzQc/F2VL
-								q3x9RfKihQ==
+								2ZoNF5YpjHEj
+								HUvwA4/9xg==
 								</data>
 								<key>Size</key>
-								<integer>88184</integer>
+								<integer>90819</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6370,7 +6380,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-26T19:51:52Z</date>
+						<date>2019-07-02T17:04:01Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6625,6 +6635,16 @@
 								<key>Size</key>
 								<integer>229581</integer>
 							</dict>
+							<key>files/stacks-image-6bca931-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								DCIDka7mcE1x
+								ESFCfLAtQQ==
+								</data>
+								<key>Size</key>
+								<integer>90403</integer>
+							</dict>
 							<key>files/stacks-image-7ca5723-250x260.png</key>
 							<dict>
 								<key>Digest</key>
@@ -6779,11 +6799,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5wQEJCKqgq1v
-								mx3Pyuigow==
+								2bseI1nJOeOJ
+								vPdDAjmT3w==
 								</data>
 								<key>Size</key>
-								<integer>192255</integer>
+								<integer>196441</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -6799,11 +6819,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/rZ18MmxoZH3
-								gnHpwWRQYg==
+								GZKaiaUCXqnY
+								PE5rtLQ47A==
 								</data>
 								<key>Size</key>
-								<integer>148332</integer>
+								<integer>152652</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6816,7 +6836,7 @@
 					<key>page50 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-12T14:46:24Z</date>
+						<date>2019-07-02T16:05:57Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6945,31 +6965,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Jsa5Ej6ZSvuZ
-								5CJ7nur37A==
+								RE2ANbfS9VjF
+								0bU0BOwuVg==
 								</data>
 								<key>Size</key>
-								<integer>169035</integer>
+								<integer>169666</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								AJn2prbnigOl
-								EmxqaCARLA==
+								e9uX6CCzlsSN
+								U5VtmwYaKQ==
 								</data>
 								<key>Size</key>
-								<integer>24349</integer>
+								<integer>23922</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								J1WNHnCacANX
-								ucQfXfvxSg==
+								sOCyrk3llT/X
+								MecFjUv8TQ==
 								</data>
 								<key>Size</key>
-								<integer>88490</integer>
+								<integer>88161</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10706,7 +10726,7 @@
 					<key>page6 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-12T14:46:25Z</date>
+						<date>2019-07-02T15:55:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10775,31 +10795,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								oPPHrWE6du6I
-								rtUkbs455w==
+								bP4Lk+2bZfwr
+								kPxqOpCXjg==
 								</data>
 								<key>Size</key>
-								<integer>121629</integer>
+								<integer>122385</integer>
 							</dict>
 							<key>files/stacks_page_page6.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								KJcXP6Jb8P1z
-								jQq/j7qoNw==
+								mOEhyoXmvMB+
+								/Xd+gm3pWQ==
 								</data>
 								<key>Size</key>
-								<integer>25419</integer>
+								<integer>24992</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								HI49J8YYpQar
-								ZORyM0HRtw==
+								5OTgwvPkV8er
+								iLdYVoengQ==
 								</data>
 								<key>Size</key>
-								<integer>54550</integer>
+								<integer>54625</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12372,7 +12392,7 @@
 					<key>page70 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-02T14:40:41Z</date>
+						<date>2019-07-02T16:05:57Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12651,11 +12671,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								l3ZuK+gSciyq
-								+wYhMNV64g==
+								mEMRDivRvemb
+								uFEjoMGQfg==
 								</data>
 								<key>Size</key>
-								<integer>94914</integer>
+								<integer>94789</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15086,7 +15106,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-02T14:35:29Z</date>
+						<date>2019-07-02T17:04:01Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15115,11 +15135,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								LCLs03bJxDBF
-								UuLdFY64eg==
+								sRXgQln6CBh2
+								o3tEVLE08w==
 								</data>
 								<key>Size</key>
-								<integer>5663</integer>
+								<integer>5791</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15198,7 +15218,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-07-02T14:35:29Z</date>
+						<date>2019-07-02T15:58:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -16277,8 +16297,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								V7Nv7RZyCe/3
-								0fkz7Yomfg==
+								fiSPfu1jf0Rz
+								1KuzHmEKYA==
 								</data>
 								<key>Size</key>
 								<integer>4644</integer>
@@ -16435,7 +16455,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFl0jV4rxSADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFl4wGdeuWADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16445,14 +16465,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwWXSNXiv
-				o4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwWXjAZ17
+				r4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBZdI1eK/V
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBZeMBnXv6
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16462,7 +16482,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBZdI1eK/3gAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBZeMBnXw1gAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16472,7 +16492,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBZdI1eLAYgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBZeMBnXxwgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
