--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-26T19:51:52Z</date>
+						<date>2019-07-02T16:12:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -248,6 +248,16 @@
 								<key>Size</key>
 								<integer>79044</integer>
 							</dict>
+							<key>files/stacks-image-6bca931-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								DCIDka7mcE1x
+								ESFCfLAtQQ==
+								</data>
+								<key>Size</key>
+								<integer>90403</integer>
+							</dict>
 							<key>files/stacks-image-779681d-1200x800.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -372,11 +382,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/15bNACcIZ/9
-								NF/hg5aZ2w==
+								MjU1fy9Axp3G
+								1OuheHlqEw==
 								</data>
 								<key>Size</key>
-								<integer>156593</integer>
+								<integer>160779</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -392,11 +402,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nQTAzQc/F2VL
-								q3x9RfKihQ==
+								2ZoNF5YpjHEj
+								HUvwA4/9xg==
 								</data>
 								<key>Size</key>
-								<integer>88184</integer>
+								<integer>90819</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
