--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/16-CS-Education-Summit/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/16-CS-Education-Summit/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-06-19T16:47:38Z</date>
+						<date>2019-07-02T17:45:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -162,11 +162,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								l0mnQ4Ltq5AU
-								UTQoITINKw==
+								HDZZ13td1yxh
+								OQmqWBshLQ==
 								</data>
 								<key>Size</key>
-								<integer>50422</integer>
+								<integer>50401</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
